# wasm-image-pipeline

./: .gitignore  .tool-versions  Dockerfile  Justfile  README.md  controller  go.mod  go.sum
.github/workflows/: ci.yml
apps/cli/: cli  go.mod  main.go
apps/controller/: go.mod  main.go
apps/sticher/: go.mod
deploy/k8s/: base.yaml  minio.yaml
modules/filter/: .gitignore  Cargo.toml
modules/filter/.cargo/: config.toml
modules/filter/src/: lib.rs
modules/filter/tests/: filter_wasi.rs  filter_wasi_integration.rs
modules/wrapper/: wrapper
modules/wrapper/src/: main.rs
pkg/kube/: jobgen.go
pkg/split/: split.go
pkg/storage/: minio.go
scripts/: entrypoint.sh  test_pipeline.sh
