[package]
name = "filter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.6"
clap = { version = "4.0", features = ["derive"] }

[package.metadata.wasm]
target = "wasm32-wasip1"

[target.wasm32-wasip1]
rustflags = ["-C", "target-feature=+simd128"]
runner = "wasmedge"
