[package]
name = "filter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.6"

[package.metadata.wasm]
target = "wasm32-wasip1"

[target.wasm32-wasip1]
rustflags = ["-C", "link-self-contained=no", "target-feature=+simd128"]
runner = "wasmedge"

[[test]]
name = "filter_wasi_integration"
path = "tests/filter_wasi_integration.rs"
